--- a/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
+++ b/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
@@ -156,35 +156,103 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdb-rH-fGl">
-                                <rect key="frame" x="16" y="48" width="56" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <state key="normal" title="Cancel"/>
-                                <connections>
-                                    <segue destination="deT-eb-dCs" kind="unwind" unwindAction="unwindSegueWithSegue:" id="mAq-ze-vTW"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZI-aJ-yNw">
-                                <rect key="frame" x="140.5" y="70" width="94" height="27"/>
-                                <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
-                                <color key="textColor" red="0.017159868339999999" green="0.029842565080000001" blue="0.39121986040000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mS7-FI-rTS">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Item" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WZI-aJ-yNw">
+                                        <rect key="frame" x="8" y="45" width="359" height="27"/>
+                                        <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="24"/>
+                                        <color key="textColor" red="0.017159868339999999" green="0.029842565080000001" blue="0.39121986040000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zdb-rH-fGl">
+                                        <rect key="frame" x="8" y="8" width="56" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title="Cancel"/>
+                                        <connections>
+                                            <segue destination="deT-eb-dCs" kind="unwind" unwindAction="unwindSegueWithSegue:" id="mAq-ze-vTW"/>
+                                        </connections>
+                                    </button>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AddImage" translatesAutoresizingMaskIntoConstraints="NO" id="PQK-wD-hX6">
+                                        <rect key="frame" x="68" y="80" width="239" height="195"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="195" id="L4f-Om-toi"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UWs-jQ-6Hd">
+                                        <rect key="frame" x="15" y="302" width="89" height="21"/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIV-tj-LWz">
+                                        <rect key="frame" x="15" y="347" width="40" height="21"/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="z8c-sl-TQd">
+                                        <rect key="frame" x="112" y="302" width="91" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtype" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VMc-Qe-3ts">
+                                        <rect key="frame" x="15" y="392" width="67" height="21"/>
+                                        <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nd9-HC-M9K" customClass="CurvedEdgeButton" customModule="VirtualWardrobe" customModuleProvider="target">
+                                        <rect key="frame" x="318" y="8" width="49" height="30"/>
+                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <state key="normal" title="Submit">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="WZI-aJ-yNw" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="58F-cQ-Xp6"/>
+                                    <constraint firstItem="zdb-rH-fGl" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="8" id="65G-qY-aRA"/>
+                                    <constraint firstItem="VMc-Qe-3ts" firstAttribute="top" secondItem="xIV-tj-LWz" secondAttribute="bottom" constant="24" id="6kY-Dd-Zbp"/>
+                                    <constraint firstItem="PQK-wD-hX6" firstAttribute="top" secondItem="WZI-aJ-yNw" secondAttribute="bottom" constant="8" id="7Ne-wP-J6e"/>
+                                    <constraint firstItem="z8c-sl-TQd" firstAttribute="top" secondItem="PQK-wD-hX6" secondAttribute="bottom" constant="27" id="DuB-3K-Auo"/>
+                                    <constraint firstItem="z8c-sl-TQd" firstAttribute="top" secondItem="UWs-jQ-6Hd" secondAttribute="top" id="GM8-RJ-tb4"/>
+                                    <constraint firstItem="VMc-Qe-3ts" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="15" id="HR5-IJ-3Ig"/>
+                                    <constraint firstItem="UWs-jQ-6Hd" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="15" id="JYx-3m-a8f"/>
+                                    <constraint firstItem="xIV-tj-LWz" firstAttribute="top" secondItem="UWs-jQ-6Hd" secondAttribute="bottom" constant="24" id="S2B-2m-2Gt"/>
+                                    <constraint firstItem="Nd9-HC-M9K" firstAttribute="top" secondItem="mS7-FI-rTS" secondAttribute="top" constant="8" id="bb9-Op-3tW"/>
+                                    <constraint firstItem="zdb-rH-fGl" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="8" id="c7h-wU-DoM"/>
+                                    <constraint firstItem="z8c-sl-TQd" firstAttribute="leading" secondItem="UWs-jQ-6Hd" secondAttribute="trailing" constant="8" id="gvM-Rb-3t3"/>
+                                    <constraint firstItem="PQK-wD-hX6" firstAttribute="centerX" secondItem="mS7-FI-rTS" secondAttribute="centerX" id="jWI-dJ-nVw"/>
+                                    <constraint firstItem="xIV-tj-LWz" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="15" id="ku4-rj-urw"/>
+                                    <constraint firstItem="WZI-aJ-yNw" firstAttribute="top" secondItem="zdb-rH-fGl" secondAttribute="bottom" constant="3" id="onq-uM-lk0"/>
+                                    <constraint firstAttribute="trailing" secondItem="Nd9-HC-M9K" secondAttribute="trailing" constant="8" id="pse-CB-LD1"/>
+                                    <constraint firstItem="WZI-aJ-yNw" firstAttribute="centerX" secondItem="mS7-FI-rTS" secondAttribute="centerX" id="sZ8-lz-6ps"/>
+                                    <constraint firstItem="PQK-wD-hX6" firstAttribute="leading" secondItem="mS7-FI-rTS" secondAttribute="leading" constant="68" id="wd9-Fj-7rW"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="0.99607843139999996" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.96939242830000005" blue="0.057432687990000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="zdb-rH-fGl" firstAttribute="leading" secondItem="leq-xu-8ml" secondAttribute="leading" constant="16" id="6Gh-1W-SIL"/>
-                            <constraint firstItem="WZI-aJ-yNw" firstAttribute="top" secondItem="leq-xu-8ml" secondAttribute="top" constant="50" id="TQw-4t-hfM"/>
-                            <constraint firstItem="WZI-aJ-yNw" firstAttribute="centerX" secondItem="iJ7-vl-YMx" secondAttribute="centerX" id="nEi-ry-Csb"/>
-                            <constraint firstItem="zdb-rH-fGl" firstAttribute="top" secondItem="leq-xu-8ml" secondAttribute="top" constant="28" id="rhR-4I-RHd"/>
+                            <constraint firstItem="mS7-FI-rTS" firstAttribute="bottom" secondItem="leq-xu-8ml" secondAttribute="bottom" id="0R8-eG-K7G"/>
+                            <constraint firstItem="mS7-FI-rTS" firstAttribute="trailing" secondItem="leq-xu-8ml" secondAttribute="trailing" id="0gj-b1-cBf"/>
+                            <constraint firstItem="mS7-FI-rTS" firstAttribute="leading" secondItem="leq-xu-8ml" secondAttribute="leading" id="5LI-Qa-KBA"/>
+                            <constraint firstItem="mS7-FI-rTS" firstAttribute="top" secondItem="leq-xu-8ml" secondAttribute="top" id="LgC-dt-0bv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="leq-xu-8ml"/>
                     </view>
+                    <connections>
+                        <outlet property="itemImageView" destination="PQK-wD-hX6" id="SXc-Y4-JjL"/>
+                        <outlet property="itemNameTextField" destination="z8c-sl-TQd" id="sr6-Vm-yaA"/>
+                        <outlet property="mainScrollView" destination="mS7-FI-rTS" id="4Ae-IU-YxI"/>
+                        <outlet property="submitButton" destination="Nd9-HC-M9K" id="6qY-XZ-cN5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WgP-M4-7AF" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="deT-eb-dCs" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2780" y="94"/>
+            <point key="canvasLocation" x="2780" y="93.103448275862078"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tce-AX-jGl">
@@ -208,6 +276,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="AddImage" width="576" height="452"/>
         <image name="AddSymbol" width="145" height="141"/>
     </resources>
 </document>
